Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN. Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN.     Frontend Developer Intern at Email Meter . Broadridge Front-End Developer (Contract) | SmartRecruiters. Sr Frontend Developer (React JS or Angular JS). Broadsign Front End Web Developer Intern | SmartRecruiters. Front-end Engineer - TED Conferences LLC - Career Page. Developer Front End - mindcurv - Career Page. Veeam Front-End Developer (AEM) | SmartRecruiters. Job Application for Front End Software Engineer at Menlo Security. Bey Front End Developer | SmartRecruiters. Veeam Front-End Developer (AEM) | SmartRecruiters. Omio Engineering Manager - Front End - Core XP | SmartRecruiters. Veeam Front-End Developer (AEM) | SmartRecruiters. WW International (formerly Weight Watchers) Careers - Front End Engineer. Adevinta Frontend Engineer Habitaclia | SmartRecruiters. Job Application for Frontend Developer (m/w/div) at Dept. Job Application for Lead Frontend Developer (m/w/div) at Dept. Job Application for Frontend Developer at Dept. Job @ WEVENTURE (Berlin): Front-End Developer (m/w) | JOIN. Front-end developer - ??? - Japan.       Senior Frontend Developer - Parent ApS     . Front-end Software Engineer - Akamai Careers. Job Application for Développeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI. Front End Developer - Cerebral Staffing, LLC - Career Page. Job @ tsitrone medien + Co. KG (Köln): Frontend We... | JOIN.     Senior Frontend Developer at 4Finance IT . outsourced Front End Shopify Developer | SmartRecruiters. outsourced Shopify Front End Developer | SmartRecruiters. DNEG Careers - Front End Developer. Job Application for Senior Frontend Engineer at Impala. Optimizely Senior Software Engineer, Front End | SmartRecruiters. Frontend Developer at Opera. Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN. Job Application for Front-end Developer at Roivant Sciences. iSpace, Inc. Cloud Solut

--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,22 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698584341-front-end-developer-contract-'>Broadridge Front-End Developer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
+    Frontend Developer Intern at Email Meter
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698584341-front-end-developer-contract-'>Broadridge Front-End Developer (Contract) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
@@ -146,7 +160,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -154,15 +168,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://opera.breezy.hr/p/8cfce7df5ae7-frontend-developer'>Frontend Developer at Opera</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opera.breezy.hr/p/8cfce7df5ae7-frontend-developer'>Frontend Developer at Opera</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -234,7 +248,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/ozGrbfwB'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlegroup/job/ozGrbfwB'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -268,7 +282,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -282,7 +296,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://zurich.impacthub.ch/de/job/front-end-host-colab-100/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zurich.impacthub.ch/de/job/front-end-host-colab-100/'>
 		Impact Hub Zurich |
 		Front-End-Host Colab - 100% - Impact Hub Zurich	</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -410,7 +424,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://apply.workable.com/zencargo/j/A7D28AE544/'>Senior Frontend Engineer - Zencargo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/zencargo/j/A7D28AE544/'>Senior Frontend Engineer - Zencargo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -444,21 +458,9 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://flyhtaerospace.applytojob.com/apply/odykVbvSAr/Front-End-Developer'>Front End Developer - FLYHT Aerospace - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flyhtaerospace.applytojob.com/apply/odykVbvSAr/Front-End-Developer'>Front End Developer - FLYHT Aerospace - Career Page</a></h5> 
 <p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698380531-junior-frontend-developer'>Publicis Groupe Junior Frontend Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://lugera.jobs/job/frontend-developer-21667/?utm_source=&utm_medium='>Frontend Developer - Pracovn? ponuky v Lugere</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/sentinelone/job/oVwrbfwN'>SentinelOne Careers - Frontend Engineer</a></h5> 
-<p><span class="badge badge-light">Tel Aviv-Yafo Tel Aviv-Yafo</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
