--- a/full-stack.html
+++ b/full-stack.html
@@ -118,11 +118,11 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
+<h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540696-full-stack-software-engineer-data-platform'>Traveloka Full Stack Software Engineer - Data Platform | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540696-full-stack-software-engineer-data-platform'>Traveloka Full Stack Software Engineer - Data Platform | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -248,11 +248,11 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/gh878yb33dwjmja8qcrnfg4z3r'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/gh878yb33dwjmja8qcrnfg4z3r'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +378,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314189-consultant-full-stack-senior'>SMARTWAVE Consultant Full stack Senior | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314189-consultant-full-stack-senior'>SMARTWAVE Consultant Full stack Senior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
